@@ -13,6 +13,8 @@ Summary of important user-visible changes for statistics 1.4.3:
  ** confusionmat       (patch #9971)
 
  ** cophenet           (patch #10040)
+ 
+ ** gscatter           (patch #10043)
 
  ** inconsistent       (patch #10008)
  
